<resources>
    <string name="app_name">DayThree</string>
    <string name="address">Dhaka, Banassre</string>
    <string name="searchStore">Search Store</string>
    <string name="exclusive_offer">Exclusive Offer</string>
    <string name="see_all">See all</string>
    <string name="best_selling">Best Selling</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="home">Market</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="start">start</string>
    <string name="cancel">cancel</string>
    <string name="dialog_start_game">start game</string>
</resources>